Fix overflowing scrollbar issue in ratio-block

--- a/src/scss/utilities/_utilities.scss
+++ b/src/scss/utilities/_utilities.scss
@@ -374,14 +374,12 @@ Styleguide 6.9
   .k-ratio-block__centered {
     display: block;
     flex: 0 0 auto;
-    overflow: auto;
+    overflow: hidden;
     max-width: 100%;
-    max-height: 100%;
     backface-visibility: hidden;
     
     img {
       max-width: 100%;
-      max-height: 100%;
     }
   }
 }
